# CLearn

./: .gitignore  CMakeLists.txt  README.md
libcurl_sample/: libcurl_sample.c
libs/cJSON/: CMakeLists.txt
libs/libcurl_mingw64/: CMakeLists.txt
libs/libportaudio_mingw64/: CMakeLists.txt  libportaudio_generate_sample.c  libportaudio_generate_wave.c  libportaudio_sample.c  libportaudio_wave.c
libs/libsdl2_mingw64/: CMakeLists.txt  sdl2_sample.c
libs/libserialport_mingw64/: CMakeLists.txt  libserialport_sample.c
libs/mongoose_mingw64/: CMakeLists.txt
libs/mqttc_mingw64/: CMakeLists.txt  mqtt_as_sample.c
libs/nettle_mingw64/: CMakeLists.txt  nettle_aes_sample.c  nettle_sample.c
libs/openssl_mingw64/: CMakeLists.txt  openssl_sample.c
libs/reg_exp/: CMakeLists.txt  regexp.c
libs/utf8/: CMakeLists.txt  libutf8.h  utf8_sample.c
mongoose_mingw64/lib/pkgconfig/: mongoose.pc
multi_thread/: producer_consumer_model.c
reg_exp/: regexp.c  regexp.h  regexp_sample.c
src/: cJSON_sample.c  callback_sample.c  esp8266_sample.c  libserialport_sample.c  libutf8_sample.c  linked_list_sample.c  mongoose_webserver_sample.c  mqtt_as_sample.c  mqtt_sample.c  nettle_aes_sample.c  nettle_sample.c  openssl_sample.c  print_emojis.c  regexp_sample.c
src/multi_thread/: threads_c11.h  threads_c11_sample.c  win_thread_sample.c
std_library/: copy_string_sample.c
third_party_libs/libserialport_mingw64/lib/: libserialport.la
third_party_libs/reg_exp/: regexp.h
utf8/: libutf8.c  print_emojis.c
